added all types in EventListener

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -54,12 +54,15 @@ library
   -- other-modules:       
   
   -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:    
+  default-extensions:    GeneralizedNewtypeDeriving, JavaScriptFFI
   
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.8 && <4.9,
                        ghcjs-base,
-                       linear
+                       linear,
+                       time,
+                       aeson,
+                       text
   
   -- Directories containing source files.
   -- hs-source-dirs:      
