use Data.Colour to represent color

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -65,7 +65,8 @@ library
                        time,
                        aeson,
                        text,
-                       lens
+                       lens,
+                       colour
   
   -- Directories containing source files.
   -- hs-source-dirs:      
