- shifted default extensions to individual files - distinction between P{To,From}JSVal and {To,From}JSVal

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -56,7 +56,7 @@ library
   -- other-modules:       
   
   -- LANGUAGE extensions used by modules in this package.
-  default-extensions:    GeneralizedNewtypeDeriving, JavaScriptFFI, TemplateHaskell
+  -- default-extensions:    
   
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.8 && <4.9,
