Basic skeleton working

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -49,9 +49,16 @@ cabal-version:       >=1.10
 library
   -- Modules exported by the library.
   exposed-modules:     JavaScript.Cocos2d,
+                       JavaScript.Cocos2d.Class,
                        JavaScript.Cocos2d.Types,
-                       JavaScript.Cocos2d.Layer,
+                       JavaScript.Cocos2d.EGLView
+                       JavaScript.Cocos2d.Director
+                       JavaScript.Cocos2d.Game
+                       JavaScript.Cocos2d.Sys
                        JavaScript.Cocos2d.EventListener
+                       JavaScript.Cocos2d.Node,
+                       JavaScript.Cocos2d.Layer,
+                       JavaScript.Cocos2d.Scene
   
   -- Modules included in this library but not exported.
   -- other-modules:       
