added Config for Node

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -75,7 +75,8 @@ library
                        aeson,
                        text,
                        lens,
-                       colour
+                       colour,
+                       data-default
   
   -- Directories containing source files.
   -- hs-source-dirs:      
