remove NodeConfig and opt for a more primitive interface

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -74,8 +74,7 @@ library
                        aeson,
                        text,
                        lens,
-                       colour,
-                       data-default
+                       colour
   
   -- Directories containing source files.
   -- hs-source-dirs:      
