added Key type; shrinked boilerplate modules into the main module; simplified EventListener api

--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -50,10 +50,7 @@ library
   -- Modules exported by the library.
   exposed-modules:     JavaScript.Cocos2d,
                        JavaScript.Cocos2d.Types,
-                       JavaScript.Cocos2d.EGLView
-                       JavaScript.Cocos2d.Director
-                       JavaScript.Cocos2d.Sys
-                       JavaScript.Cocos2d.EventListener
+                       JavaScript.Cocos2d.EventListener,
                        JavaScript.Cocos2d.Node,
                        JavaScript.Cocos2d.Layer,
                        JavaScript.Cocos2d.Scene
