--- a/ghcjs-cocos2d.cabal
+++ b/ghcjs-cocos2d.cabal
@@ -52,12 +52,14 @@ library
                        JavaScript.Cocos2d.Event,
                        JavaScript.Cocos2d.Schedule,
                        JavaScript.Cocos2d.Node,
+                       JavaScript.Cocos2d.Action,
                        JavaScript.Cocos2d.Layer,
                        JavaScript.Cocos2d.Sprite,
                        JavaScript.Cocos2d.Scene,
                        JavaScript.Cocos2d.Label,
                        JavaScript.Cocos2d.Types,
                        JavaScript.Cocos2d.Async,
+                       JavaScript.Cocos2d.CCS,
                        JavaScript.Cocos2d.Utils
   
   -- Modules included in this library but not exported.
